# ansible-collection-kubernetes

./: .ansible-lint  .charts.yml  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  .zuul.yaml  404.html  AGENTS.md  CHANGELOG.md  Earthfile  Jenkinsfile  README.md  flake.nix  galaxy.yml  mkdocs.yml  pyproject.toml  release-please-config.json  renovate.json  requirements.txt  tox.ini  vendir.lock.yml  vendir.yml
.github/workflows/: ansible-test.yml  bump.yaml  ci.yaml  docs.yml  linters.yml  molecule.yml  publish.yml  release-please.yaml  release.yml
.jenkins/: upgrade.sh
SUMMARY/: index.html
charts/cilium/: Chart.yaml
docs/: SUMMARY.md
docs/ops/: custom-ca.md  upgrades.md
hack/: sync-charts.sh
hack/bump/: kubernetes.sh
meta/: runtime.yml
molecule/aio/: molecule.yml
molecule/bgp/: molecule.yml  prepare.yml  verify.yml
molecule/cluster-api/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/cluster-api-upgrade/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/cluster-upgrade/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/containerd/: converge.yml  verify.yml
molecule/download-artifacts/: converge.yml  molecule.yml
molecule/download_binaries/: converge.yml  molecule.yml  prepare.yml
molecule/forget-package/: converge.yml  prepare.yml  (+1 more)
playbooks/: cni.yml  csi.yml  download_artifacts.yml  download_binaries.yml  flux.yml  helm.yml  site.yml  upgrade.yml
tools/: generate-checksums.sh
zuul.d/: jobs-focal.yaml  jobs-jammy.yaml  jobs-noble.yaml  jobs-rockylinux9.yaml  jobs.yaml  project.yaml
(+247 files in other folders)
